# cocoro

./: .rustfmt.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: backtracking_parser.rs  calculator.rs  csv_parser.rs  expr_parser.rs  parser_cocoro.rs  parser_cocoro_v2.rs  parser_combinators.rs  parser_trait.rs  sexpr_parser.rs  simple_weave.rs
src/: and_then.rs  cocoro.rs  compose.rs  continue_while.rs  contramap_input.rs  coro.rs  coro_assertions.rs  either.rs  feed_with.rs  fixed_point.rs  flatten.rs  from_control_flow.rs  from_fn.rs  into_coro.rs  join.rs  just_return.rs  just_yield.rs  lib.rs  map_return.rs  map_yield.rs  map_yield_while.rs  metaprogramming.rs  process.rs  recursive.rs  return_with.rs  suspend.rs  suspended.rs  take.rs  test.rs  try_map_yield.rs  typed_as.rs  until.rs  void.rs  weave.rs  with_state.rs  yield_with.rs  zip.rs
tests/: lib.rs
