[package]
name = "cocoro"
version = "0.1.0"
authors = ["C-3PO the Dragon Slayer"]
description = "A more type-safe take on Rust stackless coroutines"
edition = "2021"
license-file = "LICENSE"
keywords = [
    "coroutine",
    "stackless",
    "concurrency",
]

categories = [
    "asynchronous",
    "concurrency",
    "no-std",
    "no-std::no-alloc",
    "rust-patterns",
]
repository = "https://github.com/c3potheds/cocoro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.11"