[package]
name = "cocoro"
version = "0.1.0"
authors = ["C-3PO the Dragon Slayer"]
description = "A more type-safe take on Rust stackless coroutines"
edition = "2024"
license-file = "LICENSE"
keywords = [
    "coroutine",
    "stackless",
    "concurrency",
]

categories = [
    "asynchronous",
    "concurrency",
    "no-std",
    "no-std::no-alloc",
    "rust-patterns",
]
repository = "https://github.com/c3potheds/cocoro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.15"

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "csv_parser"
path = "examples/csv_parser.rs"

[[example]]
name = "simple_weave"
path = "examples/simple_weave.rs"

[[example]]
name = "sexpr_parser"
path = "examples/sexpr_parser.rs"